--- a/sass/sass.scss
+++ b/sass/sass.scss
@@ -2,5 +2,5 @@
     margin:0;
     padding: 0;
 }
-
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;1,500&display=swap');
 @import "./general.scss";
