--- a/estilos/sass.css
+++ b/estilos/sass.css
@@ -7,9 +7,40 @@
 body {
   width: 100%;
   height: 160vh;
-  background-image: linear-gradient(to top, #482a85, #7834ff, #c47747);
+  background-image: linear-gradient(to bottom, #2a3385, #c47747);
   background-repeat: no-repeat;
 }
+body main .galeria {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 2%;
+}
+body main .galeria .carta {
+  margin: 1%;
+}
+body main .galeria .estilosCarta {
+  color: white;
+  text-align: center;
+  width: 500px;
+  height: 500px;
+  padding: 10%;
+  border: 2px solid white;
+  border-radius: 50%;
+}
+body main .galeria .estilosCarta .estilosCartaTitulo {
+  font-size: 33px;
+}
+body main .galeria .estilosCarta .cartaImg {
+  width: 100px;
+  height: 100px;
+}
+
 body header {
   padding-top: 20px;
   display: grid;
@@ -19,8 +50,8 @@ body header {
   grid-template-areas: "titulo titulo titulo" "buscaBoton notiBoton botonAgregar" "paises . .";
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 80px);
-  background-color: rgb(255, 255, 255);
-  border-bottom: 2px groove rgb(187, 187, 187);
+  background-color: rgba(0, 0, 0, 0.568);
+  border-bottom: 5px groove rgb(0, 0, 0);
 }
 body header h1 {
   grid-area: titulo;
@@ -30,16 +61,14 @@ body header h1 {
   margin-bottom: 40px;
 }
 body header .estilosBar, body header .notiBoton, body header .botonAgregar, body header .paises {
-  background-image: linear-gradient(to top, #7834ff, #36a0e7);
-  border: 2px inset rgb(187, 187, 187);
+  background-image: linear-gradient(to top, #050507, #2a2b2b);
+  border: 2px inset rgb(15, 17, 29);
   color: white;
   font-weight: 600;
 }
 body header .estilosBotones {
-  background-color: rgba(72, 42, 133, 0);
+  background-image: linear-gradient(to top, #050507, #2a2b2b);
   border: 2px inset rgba(72, 42, 133, 0);
-  color: #7834ff;
-  font-weight: 600;
 }
 body header .buscaBoton {
   grid-area: buscaBoton;
@@ -59,17 +88,8 @@ body header .paises {
   grid-area: paises;
   margin-bottom: 90px;
 }
-body header h1, body header p, body header label, body header .estilosBotones {
-  color: #482a85;
+body header h1, body header p, body header label, body header .estilosBotones, body header .buscaBotonLabel {
+  color: rgb(160, 160, 160);
+  text-shadow: 2px 2px 3px rgb(39, 39, 39);
   font-family: "EB Garamond", serif;
-}
-body main .galeria {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  padding: 2%;
-}
-body main .galeria .carta {
-  margin: 1%;
 }/*# sourceMappingURL=sass.css.map */
