--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -1,67 +1,15 @@
 body{
     width: 100%;
     height: 160vh;
-    background-image: linear-gradient(to top, #482a85, #7834ff, #c47747);
+    background-image: linear-gradient(to bottom, #2a3385, #c47747);
     background-repeat: no-repeat;
-    header{
-        padding-top: 20px;
-        display: grid;
-        justify-content: center;
-        align-items: center;
-        justify-items: center;
-        grid-template-areas:
-        "titulo titulo titulo"
-        "buscaBoton notiBoton botonAgregar"
-        "paises . ."
-        ;
-        grid-template-columns: repeat(3,1fr);
-        grid-template-rows: repeat(3,80px);
-        background-color: rgb(255, 255, 255);
-        border-bottom: 2px groove rgb(187, 187, 187);
-        h1{
-            grid-area: titulo;
-            font-size: 55px;
-            padding-bottom: 10px;
-            margin-top: 20px;
-            margin-bottom: 40px;
-        }
-        .estilosBar, .notiBoton, .botonAgregar, .paises{
-            background-image: linear-gradient(to top, #7834ff, #36a0e7);         
-            border: 2px inset rgb(187, 187, 187);
-            color: white;
-            font-weight: 600;
-        } 
-        .estilosBotones{
-            background-color: #482a8500;
-            border: 2px inset #482a8500;
-            color: #7834ff;
-            font-weight: 600;
-        }
-        .buscaBoton{
-            grid-area: buscaBoton;    
-        }
-        .botonFiltro{
-            padding: 5px;
-        }
-        .notiBoton{
-            grid-area: notiBoton;
-            padding: 25px;
-        }        
-        .botonAgregar{
-            grid-area: botonAgregar;
-            padding: 25px;
-        }
-        .paises{
-            grid-area: paises;
-            margin-bottom: 90px;
-        }
-        h1, p, label, .estilosBotones{
-            color: #482a85;
-            font-family: 'EB Garamond', serif;
-        }
-    }
+    
     main{
         .galeria{
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: center;
             width: 100%;
             height: 100%;
             display: flex;
@@ -69,6 +17,22 @@ body{
             padding: 2%;            
             .carta{
                 margin: 1%;
+            }
+            .estilosCarta{
+                color: white;
+                text-align: center;
+                width: 500px;
+                height: 500px;
+                padding: 10%;
+                border: 2px solid white;
+                border-radius: 50%;
+                .estilosCartaTitulo{
+                    font-size: 33px;
+                }
+                .cartaImg{
+                    width: 100px;
+                    height: 100px;
+                }
             }
         }
         
