--- a/sass/sass.scss
+++ b/sass/sass.scss
@@ -4,3 +4,4 @@
 }
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;1,500&display=swap');
 @import "./general.scss";
+@import "./header";
